# xerocode-ai-office

./: .gitignore  BRANDBOOK_FINAL_v3.0.html  CLAUDE.md  LICENSE  README.md  ROLEFLOW.html  ROLEFLOW_AI.html  ROLEFLOW_BRAND_PROJECT.html  SYLAR.html  SYLAR_AETHER_BRANDBOOK.html  SYLAR_DESIGN_VISIONS.html  SYLAR_STEK_BRANDBOOK.html  XEROCODE_DESIGN_SESSION.md  XEROCODE_FULL.html  XEROCODE_REDESIGN_BRIEF.md  XEROCODE_SCREENS_DEEPSPEC.md  XeroCode_Pitch.js  XeroCode_Pitch.pptx  XeroCode_Pitch_BusinessPlan.docx  XeroCode_Pitch_BusinessPlan.js  XeroCode_Roadmap_2026.html  docker-compose.yml  logo-preview.html  package-lock.json  xerocode-brandbook.html
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b0a11b8e62b2_initial_schema.py  c001_ai_usage_log.py  c002_external_service_accounts.py  c003_sa_allowed_image_hosts.py
backend/app/: main.py
backend/app/adapters/: __init__.py  anthropic_adapter.py  base.py  custom_adapter.py  gemini_adapter.py  groq_adapter.py  ollama_adapter.py  openai_adapter.py  openrouter_adapter.py  stability_adapter.py
backend/app/api/: websocket.py
backend/app/auth/: __init__.py  service_token.py
backend/app/cli/: create_admin.py
backend/app/core/: admin.py  ai_key_resolver.py  (+20 more)
backend/scripts/: create_belsi_sa.py  ping_all_keys.py  ping_all_providers.py  ping_apiyi.py  ping_image_models.py  ping_matrix_v14.py  ping_openai.py  ping_openai_image.py  ping_providers.py  ping_providers_v2.py  ping_providers_v3.py
backend/tests/: conftest.py  test_auth.py  test_external.py
(+355 files in other folders)
